--- a/src/app/receitas/receitas.component.html
+++ b/src/app/receitas/receitas.component.html
@@ -1,15 +1,16 @@
 <div>
-    <h2>Adicionar Despesa</h2>
+    <h2>Adicionar Receita</h2>
     <form (ngSubmit)="onSubmit()">
       <mat-form-field appearance="fill">
         <mat-label>Descrição</mat-label>
-        <input matInput type="text" [(ngModel)]="descricao" name="descricao" required>
-      </mat-form-field>
-      
-      <mat-form-field appearance="fill">
+      <input matInput type="text" id="descricao" [(ngModel)]="descricao" name="descricao" required>
+    </mat-form-field>
+
+        <mat-form-field appearance="fill">
         <mat-label>Valor</mat-label>
         <input matInput type="number" [(ngModel)]="valor" name="valor" required>
       </mat-form-field>
+      
       
       <mat-form-field appearance="fill">
         <mat-label>Data</mat-label>
@@ -23,11 +24,11 @@
   </div>
   
   <div>
-    <h2>Lista de Despesas</h2>
+    <h2>Lista de Receitas</h2>
     <ul>
-      <li *ngFor="let despesa of despesas">
-        {{ despesa.descricao }} - {{ despesa.valor | currency:'BRL':'symbol':'1.2-2' }} - {{ formatarData(despesa.data) }}
-        <button mat-raised-button color="warn" (click)="removerDespesa(despesa.id)">Remover</button>
+      <li *ngFor="let receita of receitas">
+        {{ receita.descricao }} - {{ receita.valor | currency:'BRL':'symbol':'1.2-2' }} - {{ formatarData(receita.data) }}
+        <button mat-raised-button color="warn" (click)="removerReceita(receita.id)">Remover</button>
       </li>
     </ul>
   </div>
