--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
+    <mat-toolbar color="secondary">
       <mat-toolbar-row>
         <span>Meu App Financeiro</span>
       </mat-toolbar-row>
@@ -26,3 +26,4 @@
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
+
