--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<p>home works!</p>
 <mat-toolbar color="primary">
     <span>Controle Financeiro</span>
   </mat-toolbar>
@@ -23,6 +22,7 @@
         </mat-card-content>
       </mat-card>
     </div>
+
   
     <div class="links-rapidos">
       <mat-card>
@@ -34,17 +34,18 @@
       </mat-card>
     </div>
   
-    <!-- <div class="ultimas-transacoes">
+    <div class="ultimas-transacoes">
       <mat-card>
         <mat-card-title>Últimas Transações</mat-card-title>
         <mat-card-content>
           <ul>
             <li *ngFor="let transacao of ultimasTransacoes">
-              {{ transacao.descricao }} - {{ transacao.valor | currency:'BRL' }} - {{ transacao.data | date:'shortDate' }}
+              {{ transacao.descricao }} - {{ transacao.valor | currency:'BRL' }} 
+              <!-- - {{ transacao.valor| date:'shortDate' }} -->
             </li>
           </ul>
         </mat-card-content>
       </mat-card>
-    </div> -->
+    </div>
   </div>
   
